Fix missing slash

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
       <div class="copyright">
           <span>
               <a href="https://webring.wonderful.software#pandora.sh" title="วงแหวนเว็บ" target="_blank" rel="noopener">
-                <img src="img/webring.svg" width="20px" height="20px" alt="วงแหวนเว็บ" />
+                <img src="/img/webring.svg" width="20px" height="20px" alt="วงแหวนเว็บ" />
               </a>
           </span>
       </div>
